--- a/style.css
+++ b/style.css
@@ -1,7 +1,47 @@
 body {
-    background-color: darkslategrey;
+    background-color: rgb(55, 70, 70);
 }
-
+h1 {
+    color:aquamarine;
+    font-family:fantasy;
+}
+h3 {
+    color:aquamarine;
+    font-family:gill sans;
+}
+h6 {
+    color:aquamarine;
+    font-family:gill sans;
+}
 .throng{
-
+    border: solid 5px;
+    border-color:rgb(205, 240, 100);
+    background-color: rgb(90, 100, 40);
+    color: rgb(205, 240, 100);
+    border-radius: 15px;
+    font-family:serif;
+}
+.nolegs{
+    border: solid 5px;
+    border-color:rgb(240, 100, 100);
+    background-color: rgb(100, 40, 40);
+    color: rgb(240, 100, 100);
+    border-radius: 15px;
+    font-family:serif;
+}
+.schoosh{
+    border: solid 5px;
+    border-color:rgb(100, 140, 240);
+    background-color: rgb(40, 40, 100);
+    color: rgb(100, 140, 240);
+    border-radius: 15px;
+    font-family:serif;
+}
+.thrung{
+    border: solid 5px;
+    border-color:rgb(200, 100, 240);
+    background-color: rgb(80, 40, 100);
+    color: rgb(200, 100, 240);
+    border-radius: 15px;
+    font-family:serif;
 }
